@startuml
' ============================================
' ERD - He thong Gym SaaS (de xuat Codex)
' Multi-tenant, hoi vien, hoa don, diem danh
' ============================================

!theme plain
hide circle
hide methods
skinparam linetype ortho

entity phong_gym {
  +id : BIGINT <<PK>>
  --
  ma_phong : VARCHAR(50) <<UNIQUE>>
  ten_phong : VARCHAR(255)
  so_dien_thoai : VARCHAR(20)
  email : VARCHAR(255)
  dia_chi : VARCHAR(255)
  trang_thai : ENUM('hoat_dong','tam_khoa','dong_cua')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
  xoa_luc : DATETIME
}

entity nguoi_dung {
  +id : BIGINT <<PK>>
  --
  ten_dang_nhap : VARCHAR(100) <<UNIQUE>>
  mat_khau_bam : VARCHAR(255)
  ho_ten : VARCHAR(255)
  so_dien_thoai : VARCHAR(20)
  email : VARCHAR(255)
  trang_thai : ENUM('hoat_dong','khoa')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
  xoa_luc : DATETIME
}

entity nguoi_dung_gym {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  nguoi_dung_id : BIGINT <<FK>>
  vai_tro : ENUM('chu_gym','quan_ly','nhan_vien')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
}

entity hoi_vien {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  ma_hoi_vien : VARCHAR(50)
  ho_ten : VARCHAR(255)
  so_dien_thoai : VARCHAR(20)
  email : VARCHAR(255)
  gioi_tinh : ENUM('nam','nu','khac')
  ngay_sinh : DATE
  ngay_dang_ky : DATE
  trang_thai : ENUM('hoat_dong','ngung_hoat_dong','cam')
  ghi_chu : TEXT
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
  xoa_luc : DATETIME
}

entity goi_tap {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  ten_goi : VARCHAR(255)
  thoi_han_thang : INT
  so_buoi_toi_da : INT
  gia : DECIMAL(15,2)
  mo_ta : TEXT
  trang_thai : ENUM('hoat_dong','ngung_hoat_dong')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
  xoa_luc : DATETIME
}

entity dang_ky_goi {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  hoi_vien_id : BIGINT <<FK>>
  goi_tap_id : BIGINT <<FK>>
  ngay_bat_dau : DATE
  ngay_ket_thuc : DATE
  gia_goc : DECIMAL(15,2)
  giam_gia : DECIMAL(15,2)
  gia_chot : DECIMAL(15,2)
  so_buoi_toi_da : INT
  so_buoi_con_lai : INT
  ngay_dong_bang : DATE
  ly_do_huy : VARCHAR(255)
  trang_thai : ENUM('cho_kich_hoat','hoat_dong','het_han','dong_bang','huy')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
  xoa_luc : DATETIME
}

entity hoa_don {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  hoi_vien_id : BIGINT <<FK>>
  dang_ky_goi_id : BIGINT <<FK>>
  ma_hoa_don : VARCHAR(50)
  tam_tinh : DECIMAL(15,2)
  giam_gia : DECIMAL(15,2)
  tong_tien : DECIMAL(15,2)
  da_thu : DECIMAL(15,2)
  con_no : DECIMAL(15,2)
  han_thanh_toan : DATE
  trang_thai : ENUM('nhap','chua_thanh_toan','thanh_toan_mot_phan','da_thanh_toan','huy')
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
}

entity thanh_toan {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  hoa_don_id : BIGINT <<FK>>
  so_tien : DECIMAL(15,2)
  phuong_thuc : ENUM('tien_mat','the','chuyen_khoan','vi_dien_tu')
  ma_giao_dich : VARCHAR(100)
  thanh_toan_luc : DATETIME
  trang_thai : ENUM('cho_xu_ly','thanh_cong','that_bai','hoan_tien')
  ghi_chu : TEXT
  tao_luc : DATETIME
  cap_nhat_luc : DATETIME
}

entity diem_danh {
  +id : BIGINT <<PK>>
  --
  gym_id : BIGINT <<FK>>
  hoi_vien_id : BIGINT <<FK>>
  dang_ky_goi_id : BIGINT <<FK>>
  diem_danh_luc : DATETIME
  nguon : ENUM('qr','khuon_mat','thu_cong')
  hinh_anh_url : VARCHAR(255)
  trang_thai : ENUM('thanh_cong','tu_choi')
  tao_luc : DATETIME
}

' ============================================
' Quan he
' ============================================

phong_gym ||--o{ nguoi_dung_gym
phong_gym ||--o{ hoi_vien
phong_gym ||--o{ goi_tap
phong_gym ||--o{ dang_ky_goi
phong_gym ||--o{ hoa_don
phong_gym ||--o{ thanh_toan
phong_gym ||--o{ diem_danh

nguoi_dung ||--o{ nguoi_dung_gym

hoi_vien ||--o{ dang_ky_goi
goi_tap ||--o{ dang_ky_goi

hoi_vien ||--o{ hoa_don
dang_ky_goi ||--o{ hoa_don

hoa_don ||--o{ thanh_toan

hoi_vien ||--o{ diem_danh
dang_ky_goi ||--o{ diem_danh

note bottom of hoi_vien
  Chi muc de xuat:
  - UNIQUE(gym_id, so_dien_thoai)
  - UNIQUE(gym_id, email)
  - INDEX(gym_id, trang_thai)
end note

note bottom of dang_ky_goi
  Chi muc de xuat:
  - INDEX(gym_id, hoi_vien_id, trang_thai)
  - INDEX(gym_id, ngay_ket_thuc)
end note

note bottom of hoa_don
  Chi muc de xuat:
  - UNIQUE(gym_id, ma_hoa_don)
  - INDEX(gym_id, trang_thai, han_thanh_toan)
end note

@enduml
